@@ -1,5 +1,10 @@
 Revision history for Perl extension WebService::Solr.
 
+NEXT
+ - Fix a bug in Webservice::Solr::Query::stringify() where it would
+   sometimes modify the query argument structure passed in.  This would
+   make subsequent calls to stringify be broken and wrong, or even blow up.
+
 0.22 2013-04-02 17:03
  - Speed up ->value_for() to lazily find the first field, rather than
    processing all of ->values_for() and taking the first value.
